Handle deprecation warnings
Signed-off-by: dedetive <ded31459@hotmail.com>